--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -21,7 +21,7 @@
   
   
   <div class="sponsor silver">
-    <a href="http://www.xing.com" title="Xing"><%= image_tag 'sponsors/xing.png' %></a><br/>
+    <a href="http://www.xing.com/?dpt=maes&ttp=spon&plf=euru&xtr=es0209" title="Xing"><%= image_tag 'sponsors/xing.png' %></a><br/>
     <p><a href="http://www.xing.com" title="Xing">Silver Sponsor: Xing</a></p>
   </div>
   <div class="sponsor">
