--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -52,6 +52,11 @@
     <a href="http://www.flowersinspace.com" title="Flowers in Space"><%= image_tag 'sponsors/flowers-in-the-space.png' %></a><br/>
     <p><a href="http://www.flowersinspace.com" title="Flowers in Space">Flowers in Space</a></p>
   </div>
+  
+  <div class="sponsor">
+    <a href="http://www.microsoft.com" title="Microsoft"><%= theme_image_tag 'sponsors/microsoft.png' %></a><br/>
+    <p><a href="http://www.microsoft.com" title="Microsoft">Microsoft</a></p>
+  </div>  
   <div class="clear"></div>
 </div>
 
