fix bug on sidebar

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -54,7 +54,7 @@
   </div>
   
   <div class="sponsor">
-    <a href="http://www.microsoft.com" title="Microsoft"><%= theme_image_tag 'sponsors/microsoft.png' %></a><br/>
+    <a href="http://www.microsoft.com" title="Microsoft"><%= image_tag 'sponsors/microsoft.png' %></a><br/>
     <p><a href="http://www.microsoft.com" title="Microsoft">Microsoft</a></p>
   </div>  
   <div class="clear"></div>
