--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,51 @@
 <h3>Help</h3>
 
 <div class="entry">
-  <p>Comming soon on a laptop with internet near you!</p>
+  <h4>¿Who?</h4>
+  <p>
+    <a href="http://srug.org" title="Spanish Ruby User Group">Spanish Ruby User Group</a>
+  </p>
+  
+  <h4>¿What?</h4>
+  <p>EuRuKo 2009</p>
+  
+  <h4>¿Where?</h4>
+  <p>This event will be held in Barcelona, on the <a href="http://en.citilab.eu/home/" title="Citilab">Citilab</a>.</p>
+
+  <p>
+  Pl. Can Suris, s/n<br />
+  08940 Cornellà de Llobregat (BCN)<br />
+  Spain<br />
+  <a href="http://en.citilab.eu/how-get-there" title="Citilab Map">map</a>
+  </p>
+  
+  <h4>¿When?</h4>
+  <p>May 9th and 10th, 2009.</p>
+  
+  <h4>¿How much does it cost?</h4>
+  <p>30 Euros, taxes included.</p>
+  
+  <h4>¿How do I register?</h4>
+  <p>You need to register as a user on http://app.euruko2009.org and then go to the "Pay" section. Follow the steps from there to select the event and pay through PayPal, or credit card.</p>
+
+  <p>Being registered on the application doesn'tn imply you have a seat, only when your payment has been received, your seat will be reserved for you.</p>
+
+  <p>Right now we're fully booked and we can't sell any more tickets for the event.
+  invoices.</p>
+
+  <p>Invoices will be sent by e-mail.</p>
+
+  <p>It's important that you check the "Invoice Details" section on your user profile on http://app.euruko2009.org , as this is what will appear on the invoice..</p>
+  
+  <h4>Google map</h4>
+  <p><a href="http://maps.google.com/maps/ms?ie=UTF8&hl=es&msa=0&msid=103400778449559312475.0004675e3e248116a2017&z=15" title="Google Map">Google Map</a></p>
+
+  <h4>Restaurants nearby</h4>
+
+  <h4>More info</h4>
+  <p><a href="http://www.trambcn.com/index.php?idioma=ing" title="Barcelona's Tram">Barcelona's Tram</a></p>
+  
+  <p><a href="http://www.tmb.cat/en_US/home.jsp" title="Barcelona's Tube">Barcelona's Tube</a></p>
+
+  <p><a href="http://www.bcn.es/english/ihome.htm" title="Barcelona's Info">Barcelona's Info</a></p>
 </div>
