--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -39,8 +39,22 @@
   
   <h4>Google map</h4>
   <p><a href="http://maps.google.com/maps/ms?ie=UTF8&hl=es&msa=0&msid=103400778449559312475.0004675e3e248116a2017&z=15" title="Google Map">Google Map</a></p>
+  
+  <h4>Hotels nearby</h4>
+  <p><a href="http://www.campanile-barcelona-cornella.es/en/" title="Hotel Campanile">Hotel Campanile</a>
+
+  <p>Name: NH Cornella<br />
+  Address: Av. Can Corts, 11-13, Cornellà de Llobregat, Barcelona<br />
+  Phone: +34.93.4750895<br />
+  email: nhcornella@nh-hotels.com<br />
+  </p>
 
   <h4>Restaurants nearby</h4>
+  <p>Not info yet.</p>
+  
+  <h4>Power and display adapters</h4>
+  <p>We'll provide :mini-displayPort => :vga, :mini-dvi => :vga and :dvi => :vga display adapters for the speakers.</p>
+  <p>We won't provide power adapters so please bring yours!.</p>
 
   <h4>More info</h4>
   <p><a href="http://www.trambcn.com/index.php?idioma=ing" title="Barcelona's Tram">Barcelona's Tram</a></p>
