--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -38,8 +38,10 @@
   <p>It's important that you check the "Invoice Details" section on your user profile on http://app.euruko2009.org , as this is what will appear on the invoice..</p>
   
   <h4>Google map</h4>
-  <p><a href="http://maps.google.com/maps/ms?ie=UTF8&hl=es&msa=0&msid=103400778449559312475.0004675e3e248116a2017&z=15" title="Google Map">Google Map</a></p>
-  
+
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small>Ver <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14" style="color:#0000FF;text-align:left">EuRuKo2009</a> en un mapa más grande</small>
+    
+    
   <h4>Hotels nearby</h4>
   <p><a href="http://www.campanile-barcelona-cornella.es/en/" title="Hotel Campanile">Hotel Campanile</a>
 
