--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -39,7 +39,7 @@
   
   <h4>Google map</h4>
 
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small>Ver <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14" style="color:#0000FF;text-align:left">EuRuKo2009</a> en un mapa más grande</small>
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small>Ver <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14" style="color:#0000FF;text-align:left">EuRuKo2009</a> en un mapa más grande</small>
     
     
   <h4>Hotels nearby</h4>
