how to get there

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,16 +1,19 @@
 <h3>Help</h3>
 
 <div class="entry">
-  <h4>¿Who?</h4>
+  <h4>Who?</h4>
   <p>
     <a href="http://srug.org" title="Spanish Ruby User Group">Spanish Ruby User Group</a>
   </p>
   
-  <h4>¿What?</h4>
+  <h4>What?</h4>
   <p>EuRuKo 2009</p>
   
-  <h4>¿Where?</h4>
+  <h4>Where?</h4>
   <p>This event will be held in Barcelona, on the <a href="http://en.citilab.eu/home/" title="Citilab">Citilab</a>.</p>
+  
+  <h4>How to get there?</h4>
+  <p><a href="http://euruko2009.org/archives/2009/4/25/a_visual_guide_to_the_venue_for_euruko_2009/">Just follow the instuctions</a>, step by step :).</p>
 
   <p>
   Pl. Can Suris, s/n<br />
@@ -19,13 +22,13 @@
   <a href="http://en.citilab.eu/how-get-there" title="Citilab Map">map</a>
   </p>
   
-  <h4>¿When?</h4>
+  <h4>When?</h4>
   <p>May 9th and 10th, 2009.</p>
   
-  <h4>¿How much does it cost?</h4>
+  <h4>How much does it cost?</h4>
   <p>30 Euros, taxes included.</p>
   
-  <h4>¿How do I register?</h4>
+  <h4>How do I register?</h4>
   <p>You need to register as a user on http://app.euruko2009.org and then go to the "Pay" section. Follow the steps from there to select the event and pay through PayPal, or credit card.</p>
 
   <p>Being registered on the application doesn'tn imply you have a seat, only when your payment has been received, your seat will be reserved for you.</p>
