--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <li><%= link_to_unless_current 'Rooms', rooms_path %></li>
   <li><%= link_to_unless_current 'Events', events_path %></li>
-  <li><%= link_to_unless_current 'Payments', carts_path %></li>
+  <li><%= link_to_unless_current 'Payments', carts_path( :page => '1' ) %></li>
   <li><%= link_to_unless_current 'Exceptions', :controller => 'logged_exceptions' %></li>
 </ul>
