not show if empty

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,7 +50,7 @@
     <p><%= link_to "http://github.com/#{@user.github_user}", "http://github.com/#{@user.github_user}" %> <span class="tip">(github account)</span></p>
   <% end %>
   
-  <% if admin_or_current_user?( @user ) %>
+  <% if admin_or_current_user?( @user ) && !@user.carts.purchased.empty? %>
     <h6>Your purchases</h6>
     <ul>
       <% @user.carts.purchased.each do |cart| %>
