--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -50,7 +50,7 @@
         </p>
       <% end %>
     
-      <p><strong>invoice info:</strong> <%= cart.invoice_info %></p>
+      <p><strong>invoice info:</strong> <%= simple_format(cart.invoice_info) %></p>
       <p><strong>txn id:</strong> <%= cart.transaction_id %></p>
       <p><strong>purchased_at:</strong> <%= cart.purchased_at %></p>
       <p><strong>price:</strong> <%= cart.total_price_on_euros %></p>
