--- a/app/views/users/index.csv.erb
+++ b/app/views/users/index.csv.erb
@@ -1,19 +1,4 @@
-<% 
-  if( !params[:search].blank? && params[:search] == 'speakers' )
-    title( 'Speakers' )
-    
-  elsif( 
-    !params[:search].blank? && 
-    params[:search] == 'event_attendees' &&
-    !params[:event_id].blank?
-  )
-    title( 'Attendees' )
-  
-  else
-    title( 'All Registered Users' )
-  
-  end
--%>
+<% title( user_index_title ) -%>
 <%= yield(:title) %>
 
 <%= users_to_csv( @users ) %>
