--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,70 +1,83 @@
-<h3>Help</h3>
+#### Who?
 
-<div class="entry">
-  <h4>Who?</h4>
-  <p>
-    <a href="http://srug.org" title="Spanish Ruby User Group">Spanish Ruby User Group</a>
-  </p>
+  [Spanish Ruby User Group](http://srug.org "Spanish Ruby User Group")
+
+
+#### What?
+
+EuRuKo 2009
+
+
+#### Where?
+
+This event will be held in Barcelona, on the [Citilab](http://en.citilab.eu/home "Citilab").
+
+Pl. Can Suris, s/n  
+08940 Cornellà de Llobregat (BCN)  
+Spain  
+[map](http://en.citilab.eu/how-get-there "Citilab Map")
+
+
+#### How to get there?
+
+[Just follow the instuctions](http://euruko2009.org/archives/2009/4/25/a_visual_guide_to_the_venue_for_euruko_2009), step by step :).
+
+
+#### When?
+
+May 9th and 10th, 2009.
+
+
+#### How much does it cost?
+
+30 Euros, taxes included.
+
+
+#### How do I register?
+
+You need to register as a user on [registration application](http://app.euruko2009.org) and then go to the _"Pay"_ section. Follow the steps from there to select the event and pay through PayPal, or credit card.
+
+Being registered on the application doesn'tn imply you have a seat, only when your payment has been received, your seat will be reserved for you.
+
+Right now we're fully booked and we can't sell any more tickets for the event.
+invoices.
+
+Invoices will be sent by e-mail.
+
+It's important that you check the "Invoice Details" section on your user profile on [registration application](http://app.euruko2009.org), as this is what will appear on the invoice..
+
+
+#### Google map
+
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14&amp;output=embed"></iframe>
+
+Ir a [EuRuKo2009 Google Maps](http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14" style="color:#0000FF;text-align:left)
   
-  <h4>What?</h4>
-  <p>EuRuKo 2009</p>
   
-  <h4>Where?</h4>
-  <p>This event will be held in Barcelona, on the <a href="http://en.citilab.eu/home/" title="Citilab">Citilab</a>.</p>
+#### Hotels nearby
 
-  <p>
-  Pl. Can Suris, s/n<br />
-  08940 Cornellà de Llobregat (BCN)<br />
-  Spain<br />
-  <a href="http://en.citilab.eu/how-get-there" title="Citilab Map">map</a>
-  </p>
-  
-  <h4>How to get there?</h4>
-  <p><a href="http://euruko2009.org/archives/2009/4/25/a_visual_guide_to_the_venue_for_euruko_2009/">Just follow the instuctions</a>, step by step :).</p>
-  
-  <h4>When?</h4>
-  <p>May 9th and 10th, 2009.</p>
-  
-  <h4>How much does it cost?</h4>
-  <p>30 Euros, taxes included.</p>
-  
-  <h4>How do I register?</h4>
-  <p>You need to register as a user on http://app.euruko2009.org and then go to the "Pay" section. Follow the steps from there to select the event and pay through PayPal, or credit card.</p>
+[Hotel Campanile](http://www.campanile-barcelona-cornella.es/en "Hotel Campanile")
 
-  <p>Being registered on the application doesn'tn imply you have a seat, only when your payment has been received, your seat will be reserved for you.</p>
+Name: NH Cornella  
+Address: Av. Can Corts, 11-13, Cornellà de Llobregat, Barcelona  
+Phone: +34.93.4750895  
+email: nhcornella@nh-hotels.com
 
-  <p>Right now we're fully booked and we can't sell any more tickets for the event.
-  invoices.</p>
 
-  <p>Invoices will be sent by e-mail.</p>
+#### Restaurants nearby
 
-  <p>It's important that you check the "Invoice Details" section on your user profile on http://app.euruko2009.org , as this is what will appear on the invoice..</p>
-  
-  <h4>Google map</h4>
-<p>
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=en&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small>Ver <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;hl=es&amp;source=embed&amp;msa=0&amp;msid=103400778449559312475.0004675e3e248116a2017&amp;ll=41.354392,2.071095&amp;spn=0.02255,0.036478&amp;z=14" style="color:#0000FF;text-align:left">EuRuKo2009</a> en un mapa más grande</small>
-   </p> 
-    
-  <h4>Hotels nearby</h4>
-  <p><a href="http://www.campanile-barcelona-cornella.es/en/" title="Hotel Campanile">Hotel Campanile</a>
+Not info yet.
 
-  <p>Name: NH Cornella<br />
-  Address: Av. Can Corts, 11-13, Cornellà de Llobregat, Barcelona<br />
-  Phone: +34.93.4750895<br />
-  email: nhcornella@nh-hotels.com<br />
-  </p>
 
-  <h4>Restaurants nearby</h4>
-  <p>Not info yet.</p>
-  
-  <h4>Power and display adapters</h4>
-  <p>We'll provide :mini-displayPort => :vga, :mini-dvi => :vga and :dvi => :vga display adapters for the speakers.</p>
-  <p>We won't provide power adapters so please bring yours!.</p>
+#### Power and display adapters
 
-  <h4>More info</h4>
-  <p><a href="http://www.trambcn.com/index.php?idioma=ing" title="Barcelona's Tram">Barcelona's Tram</a></p>
-  
-  <p><a href="http://www.tmb.cat/en_US/home.jsp" title="Barcelona's Tube">Barcelona's Tube</a></p>
+We'll provide :mini-displayPort => :vga, :mini-dvi => :vga and :dvi => :vga display adapters for the speakers.
 
-  <p><a href="http://www.bcn.es/english/ihome.htm" title="Barcelona's Info">Barcelona's Info</a></p>
-</div>
+We won't provide power adapters so please bring yours!.
+
+
+#### More info
+
+ * [Barcelona's Tram](http://www.trambcn.com/index.php?idioma=ing "Barcelona's Tram")
+ * [Barcelona's Tube](http://www.tmb.cat/en_US/home.jsp "Barcelona's Tube")
+ * [Barcelona's Info](http://www.bcn.es/english/ihome.htm "Barcelona's Info")
