toggle attendees list

--- a/app/views/papers/_attendees.html.erb
+++ b/app/views/papers/_attendees.html.erb
@@ -1,6 +1,6 @@
 <div id="attendee">
   <h6>Attendees (<%=h @paper.attendees.count %>)</h6>
-  <%= link_to 'toogle', '#', :onclick => "$( '#attendees_list' ).slideToggle( 'fast' ); return false;"%>
+  <%= link_to 'toggle', '#', :onclick => "$( '#attendees_list' ).slideToggle( 'fast' ); return false;"%>
   <div id="attendees_list" style="display:none">
     <p>
     <ul>
