README and fixings

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -29,9 +29,9 @@
 <h4>Invoice info</h4>
 <p><%= simple_format(@cart.user.invoice_info) %></p>
 
-<!-- Invoice creation closed -->
-<% if false %>
-  <% if admin? && @cart.is_purchased? %>
+<!-- Invoice creation NOT closed, if you want to close it uncomment the if false -->
+<!-- % if false % -->
+  <% if @cart.is_purchased? %>
     <h4>Invoice</h4>
     <% if @cart.invoice %>
       <%= link_to 'Download invoice', @cart.invoice.url_path %>
@@ -39,4 +39,4 @@
       <%= link_to 'Create invoice', invoices_path( :id => @cart.id ), :method => 'post'  %>
     <% end %>
   <% end %>
-<% end %>
+<!-- % end % -->
