--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -7,7 +7,7 @@
       <%= menu_to 'Submit Talk', new_paper_path %>
       <%= menu_to 'Events', events_path %>
     <% end %>
-    <%= menu_to 'People', users_path(:page => 1) %>
+    <%= menu_to 'People', users_path %>
     <%= menu_to 'Blog', 'http://euruko2009.org' %>
     <% StaticPage.all.each do |static_page| %>
       <%= menu_to static_page.title, static_page_path( static_page ) %>
